--- a/modules/sequence_coog/doc/en/CHANGELOG
+++ b/modules/sequence_coog/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#9883 Add override to add dynamic datas for the sequence's prefix / suffix
 * BUG#9338 Update of the sequence view list following the merge of tryton 4.8
 
 Version 2.0 - 2018-04-13
