--- a/modules/endorsement_process/doc/en/CHANGELOG
+++ b/modules/endorsement_process/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11057 Add wizard to exploit in configuration to ask if we should or not apply next endorsement
 * OTH#00000 Fix crash due to erroneous call of get_next_view_or_end
 * BUG#10792 Fix endorsement part union limit
 
