--- a/modules/endorsement/locale/fr.po
+++ b/modules/endorsement/locale/fr.po
@@ -26,6 +26,10 @@ msgctxt "error:document.receive:"
 msgid "A contract must be set !"
 msgstr "Un contrat doit être renseigné !"
 
+msgctxt "error:endorsement.ask_next_endorsement:"
+msgid "Do you want to execute the endorsement \"%(next_endorsement)s\" too?"
+msgstr "Souhaitez-vous exécuter l'avenant \"%(next_endorsement)s\" également?"
+
 msgctxt "error:endorsement.contract.activation_history:"
 msgid "New version"
 msgstr "Nouvelle version"
@@ -552,6 +556,14 @@ msgstr "Mis à jour par"
 msgctxt "field:endorsement,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
+
+msgctxt "field:endorsement.ask_next_endorsement.choice,id:"
+msgid "ID"
+msgstr "Identifiant"
+
+msgctxt "field:endorsement.ask_next_endorsement.choice,question:"
+msgid "Question"
+msgstr "Question"
 
 msgctxt "field:endorsement.configuration,create_date:"
 msgid "Create Date"
@@ -2245,6 +2257,10 @@ msgctxt "model:endorsement,name:"
 msgid "Endorsement"
 msgstr "Avenant"
 
+msgctxt "model:endorsement.ask_next_endorsement.choice,name:"
+msgid "Ask Next Endorsement Choice"
+msgstr "Exécuter l'avenant suivant"
+
 msgctxt "model:endorsement.configuration,name:"
 msgid "Endorsement Configuration"
 msgstr "Configuration d'avenant"
@@ -2465,6 +2481,10 @@ msgstr "Annulation de l'avenant"
 msgctxt "model:event.type,name:event_decline_endorsement"
 msgid "Decline Endorsement"
 msgstr "Déclinaison de l'avenant"
+
+msgctxt "model:ir.action,name:"
+msgid "Ask For Next Endorsement"
+msgstr "Exécuter l'avenant suivant"
 
 msgctxt "model:ir.action,name:act_all_endorsements"
 msgid "Endorsements"
@@ -2946,6 +2966,16 @@ msgstr "Avenants"
 msgctxt "view:res.group:"
 msgid "Endorsement Definitions"
 msgstr "Définitions d'avenant"
+
+msgctxt ""
+"wizard_button:endorsement.ask_next_endorsement,choice,apply_with_generate:"
+msgid "Generate"
+msgstr "Générer"
+
+msgctxt ""
+"wizard_button:endorsement.ask_next_endorsement,choice,apply_without_generate:"
+msgid "No"
+msgstr "Non"
 
 msgctxt "wizard_button:endorsement.decline,select_reason,decline:"
 msgid "Decline"
