--- a/modules/sequence_coog/doc/fr/CHANGELOG
+++ b/modules/sequence_coog/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#13941 Correctif d'un crash sur la récupération d'une séquence avec des sous-séquences
+
 Version 2.6 - 2019-10-11
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
